test/spec/nop.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/nop.wast
(;; STDOUT ;;;
assert_invalid error:
  out/third_party/testsuite/nop.wast:246:11: type stack size too small at function. got 0, expected at least 1
  (module (func $type-i32 (result i32) (nop)))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/nop.wast:246:11: type stack at end of function is 0. expected 1
  (module (func $type-i32 (result i32) (nop)))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/nop.wast:250:11: type stack size too small at function. got 0, expected at least 1
  (module (func $type-i64 (result i64) (nop)))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/nop.wast:250:11: type stack at end of function is 0. expected 1
  (module (func $type-i64 (result i64) (nop)))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/nop.wast:254:11: type stack size too small at function. got 0, expected at least 1
  (module (func $type-f32 (result f32) (nop)))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/nop.wast:254:11: type stack at end of function is 0. expected 1
  (module (func $type-f32 (result f32) (nop)))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/nop.wast:258:11: type stack size too small at function. got 0, expected at least 1
  (module (func $type-f64 (result f64) (nop)))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/nop.wast:258:11: type stack at end of function is 0. expected 1
  (module (func $type-f64 (result f64) (nop)))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
out/third_party/testsuite/nop.wast:246: assert_invalid passed:
  error: type stack size too small at implicit return. got 0, expected at least 1
  error: @0x0000001a: end_function_body callback failed
out/third_party/testsuite/nop.wast:250: assert_invalid passed:
  error: type stack size too small at implicit return. got 0, expected at least 1
  error: @0x0000001a: end_function_body callback failed
out/third_party/testsuite/nop.wast:254: assert_invalid passed:
  error: type stack size too small at implicit return. got 0, expected at least 1
  error: @0x0000001a: end_function_body callback failed
out/third_party/testsuite/nop.wast:258: assert_invalid passed:
  error: type stack size too small at implicit return. got 0, expected at least 1
  error: @0x0000001a: end_function_body callback failed
54/54 tests passed.
;;; STDOUT ;;)
